# DeepSpeed-Kernels

./: .gitignore  .gitmodules  MANIFEST.in  README.md  TODOs  build.sh  fetch.sh  setup.py
.github/workflows/: build-kernels.yml  build.yml  release.yml
builder/: builder.py  ft_gemm.py  inf_flash_attn.py
dskernels/: __init__.py  version.py
dskernels/ft_gemm/gemm_variants/: CMakeLists.txt
dskernels/ft_gemm/gemm_variants/cutlass_extensions/: compute_occupancy.h
dskernels/ft_gemm/gemm_variants/cutlass_extensions/gemm/kernel/: default_fpA_intB_traits.h  gemm_moe_problem_visitor.h  moe_cutlass_kernel.h
dskernels/ft_gemm/gemm_variants/cutlass_extensions/gemm/warp/: mma_tensorop_dequantizer.h
dskernels/ft_gemm/gemm_variants/fpA_intB_gemm/: fpA_intB_gemm.h  fpA_intB_gemm_bf16_uint4.cu  fpA_intB_gemm_bf16_uint8.cu  fpA_intB_gemm_fp16_int4.cu  fpA_intB_gemm_template.h
dskernels/ft_gemm/gemm_variants/moe_gemm/: moe_gemm_kernels.h  moe_gemm_kernels_bf16_bf16.cu  moe_gemm_kernels_bf16_uint8.cu  moe_gemm_kernels_template.h
dskernels/ft_gemm/gemm_variants/utils/: activation_type.h  cutlass_heuristic.cc  weight_variant.h
dskernels/inf_flash_attn/blocked_flash/: CMakeLists.txt
ft_gemm/gemm_variants/: CMakeLists.txt  INIReader.h  cuda_utils.h  cutlass_heuristic.cc  cutlass_heuristic.h  cutlass_preprocessors.cc  cutlass_preprocessors.h
ft_gemm/gemm_variants/cutlass_extensions/: compute_occupancy.h  epilogue_helpers.h  ft_gemm_configs.h
ft_gemm/gemm_variants/cutlass_extensions/gemm/kernel/: moe_cutlass_kernel.h
ft_gemm/gemm_variants/fpA_intB_gemm/: fpA_intB_gemm.h  fpA_intB_gemm_bf16_uint4.cu  fpA_intB_gemm_bf16_uint8.cu  fpA_intB_gemm_fp16_int4.cu  fpA_intB_gemm_fp16_int8.cu  fpA_intB_gemm_template.h
ft_gemm/gemm_variants/moe_gemm/: moe_gemm_kernels.h  moe_gemm_kernels_bf16_bf16.cu  moe_gemm_kernels_bf16_uint4.cu  moe_gemm_kernels_bf16_uint8.cu  moe_gemm_kernels_fp16_fp16.cu  moe_gemm_kernels_fp16_uint4.cu  moe_gemm_kernels_fp16_uint8.cu  moe_gemm_kernels_template.h
ft_gemm/gemm_variants/utils/: cuda_utils.h  cutlass_heuristic.h  cutlass_preprocessors.cc  cutlass_preprocessors.h
inf_flash_attn/blocked_flash/: CMakeLists.txt  attention_atom.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  softmax.h  utils.h
release/: bump_patch_version.py  check_release_version.py  release.sh
requirements/: requirements.txt
